fix  (client, style): fixed overflow issue on firefox and android browser

--- a/client/src/assets/sass/_main_container.sass
+++ b/client/src/assets/sass/_main_container.sass
@@ -50,7 +50,7 @@
                 flex: 1
                 padding: 0 0.5em
                 textarea
-                    margin: 1em auto
+                    //margin: 1em auto
                     font-family: 'Raleway', sans-serif
                     max-height: 100px
                     width: 100%
@@ -62,6 +62,7 @@
 
             .emojis
                 width: 40px
+                min-height: 40px
                 border-left: 2px solid #dedede
 
 .credits
